# raschii

./: .flake8  .gitignore  .readthedocs.yml  README.rst  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: pytest.yml  release.yml
demos/: plot_wave.py  wave2fenics.py
documentation/: api_docs.rst  conda_environment.yml  conf.py  index.rst  raschii_dart.html  raschii_dart.rst  raschii_pyscript.rst  theory.rst  usage.rst  usage_command_line.rst  wave_models.rst
documentation/_static/: mini-coi.js  raschii_pyscript.css  raschii_pyscript.html  raschii_pyscript.py  raschii_pyscript_editor.html
raschii/: __init__.py  air_phase.py  air_phase_constant.py  air_phase_fenton.py  airy.py  base_classes.py  common.py  fenton.py  stokes.py  swd_tools.py  wave_airy.py  wave_fenton.py  wave_stokes.py
raschii/cmd/: plot.py  swd.py
raschii/cpp/: __init__.py  cpp_air.py  cpp_airy.py  cpp_fenton.py  cpp_stokes.py
raschii/swd/: __init__.py  base.py  swd_airy.py  swd_fenton.py  swd_file.py  swd_stokes.py
tests/: jit_helper.py  test_air_fenton.py  test_basic_math.py  test_blending.py  test_cmd.py  test_cpp.py  test_cpp_air.py  test_examples.py  test_fenton.py  test_infinite_depth.py  test_period_instead_of_length.py  test_shapes.py  test_stokes.py  test_swd_airy.py  test_swd_fenton.py  test_swd_stokes.py  test_wave_period.py  utils.py
