[project]
name = "raschii"
description = "A Python implementation of nonlinear regular wave theories (Stokes 2nd to 5th order and Fenton stream function waves)."
readme = "README.rst"
authors = [{name = "Tormod Landet", email = "tormod@landet.net"}]
license = "apache-2.0"

# Python version 3.11 is needed for StrEnum.
# Python version 3.10 is end-of-life in October 2026 anyways (change made in July 2026).
requires-python = ">=3.11"

# We keep dependencies to a minimum. Doing this also allows us easy use on the web.
# See the PyScript version of Raschii in documentation/_static/raschii_pyscript (html and py files)
dependencies = [
    "numpy >= 2.2",  # Numpy 2.2 is supported until December 2026 (version bump made in July 2026).
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

keywords = ["ocean", "waves", "stream", "function", "Fenton", "Stokes", "Airy"]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/TormodLandet/raschii"
Source = "https://github.com/TormodLandet/raschii"
Documentation = "https://raschii.readthedocs.io/"

[project.optional-dependencies]
plot = [
    "matplotlib >= 3.9",
]

[dependency-groups]
test = [
    "pytest >= 8.0",
]
docs = [
    "sphinx >= 8.0",
]

[tool.uv]
default-groups = ["test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
version.path = "raschii/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["raschii"]
only-packages = true

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
target-version = ['py312']
